--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,windows,linux
 
 .vscode
+**/migrations
 
 ### Project specifics ###
 *gbBackup-*.tar.gz
